<resources>
    <string name="app_name">Electronics Store</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="title_categories">Categories</string>
    <string name="title_cart">Cart</string>
    <string name="title_setting">Setting</string>
</resources>