<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.electronicsstore.admin.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_products"
            app:destination="@id/navigation_products" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.electronicsstore.admin.fragments.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" >
        <action
            android:id="@+id/action_navigation_products_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_navigation_products_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.electronicsstore.admin.fragments.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" >
        <action
            android:id="@+id/action_navigation_orders_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.electronicsstore.admin.fragments.AddProductFragment"
        android:label="fragment_add_product"
        tools:layout="@layout/fragment_add_product" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.electronicsstore.admin.fragments.ProductDetailsFragment"
        android:label="fragment_product_details"
        tools:layout="@layout/fragment_product_details" >
        <action
            android:id="@+id/action_productDetailsFragment_to_navigation_orders"
            app:destination="@id/navigation_orders" />
        <action
            android:id="@+id/action_productDetailsFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.example.electronicsstore.admin.fragments.OrderDetailsFragment"
        android:label="fragment_order_details"
        tools:layout="@layout/fragment_order_details" />
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.electronicsstore.admin.fragments.CategoriesFragment"
        android:label="fragment_categories"
        tools:layout="@layout/fragment_categories" >
        <action
            android:id="@+id/action_categoriesFragment_to_navigation_products"
            app:destination="@id/navigation_products" />
        <action
            android:id="@+id/action_categoriesFragment_to_addCategoryFragment"
            app:destination="@id/addCategoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCategoryFragment"
        android:name="com.example.electronicsstore.admin.fragments.AddCategoryFragment"
        android:label="fragment_add_category"
        tools:layout="@layout/fragment_add_category" />
</navigation>